--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
@@ -16,6 +17,7 @@
         <span class="letter">L</span>
         <span class="letter">O</span>
     </h1>
+
 </body>
 
 </html>
