--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <h1>
-        <span class="letter">H</span>
-        <span class="letter">E</span>
-        <span class="letter">L</span>
-        <span class="letter">L</span>
+        <span class="letter">D</span>
         <span class="letter">O</span>
+        <span class="letter">G</span>
+        <span class="letter">G</span>
+        <span class="letter">Y</span>
     </h1>
 
 </body>
